--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+*{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
 .hero.image{
     background: url(images/scotland-1987599_1280.jpg);
     height: 352px;
