--- a/style.css
+++ b/style.css
@@ -3,14 +3,17 @@
 }
 
 .hero.image{
-    background: url(images/scotland-1987599_1280.jpg);
+    background: url(images/scotland-1987599_1280.jpg) ;
     height: 352px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
+
 .hero.text{
   color: whitesmoke;
   position: absolute;
+  text-align: center;
   top: 200px;
+  width: 100px;
 }
