--- a/style.css
+++ b/style.css
@@ -11,9 +11,16 @@
 }
 
 .hero.text{
-  color: whitesmoke;
-  position: absolute;
-  text-align: center;
-  top: 200px;
-  width: 100px;
+    color: whitesmoke;
+    position: absolute;
+    text-align: center;
+    top: 200px;
+    width: 100px;
+    font-size: 4rem;
+}
+
+.two-column{
+    display: grid;
+    grid: template columns 1fr 1fr;
+    gap: 50px;
 }
