--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 
 img{
     width: 100%;
+    border-radius: 5px;
 }
 .hero-image{
     background: url("images/scotland-1987599_1280.jpg") ;
@@ -34,3 +35,21 @@ img{
 .info{
   font-size: 1.25em;  
 }
+
+.three-column{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 100px;
+    width 80px;
+    margin: auto;
+    margin-top: 40px;
+    margin-bottom: 50px;
+}
+
+.card{
+    background-color: blue;
+}
+
+.card-text{
+    text-align: center;
+} 
