--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ img{
 
 .three-column{
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(3, 1fr);
     gap: 100px;
     width 80px;
     margin: auto;
@@ -47,7 +47,7 @@ img{
 }
 
 .card{
-    background-color: blue;
+    background-color: rgb(0,  0, 140);
 }
 
 .card-text{
